--- a/main.css
+++ b/main.css
@@ -108,7 +108,7 @@ a, button, input, select {
 	float: right;
 	margin-left: .25em;
   }
-  p {
+  p, div {
 	margin: 1em auto;
 	max-width: 500px;
 	font-size: xx-large;
